fixed spacing of form section

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ div.form {
   height: 29rem;
   border-radius: 20px;
   border-spacing: 100px;
-  margin: 40px 86px;
+  margin: 90px 140px;
   padding: 32px 40px;
 }
 #name,
